# ClioGenAIMarketing

./: .replit  Consumer Archetype.xlsx  Consumer Subscales.xlsx  Pasted--Core-Types-export-const-ContentType-TEXT-text-IMAGE-image-VIDEO-video-AUD-1731418110367.txt  Pasted--app-py-import-streamlit-as-st-import-pandas-as-pd-from-PIL-import-Image-import-base64-Configure-1730934552808.txt  Pasted--emotion-engine-py-from-typing-import-Dict-List-import-numpy-as-np-from-dataclasses-import-datacla-1731365596314.txt  Pasted--python-import-requests-from-bs4-import-BeautifulSoup-import-re-from-urllib-parse-import-urljoin-i-1730976129857.txt  Pasted--src-constants-theme-js-export-const-COLORS-background-F3F1FF-primary-1E1B4B-a-1730934423857.txt  Pasted--types-ts-interface-Profile-name-string-age-number-occupation-string-needs-string-1731339096394.txt  Pasted--types-ts-interface-Subscale-id-string-archetype-string-name-string-interpretation-1731340031741.txt  Pasted-Archetype-Subscale-Interpretation-Objective-Consumer-Type-Autonomous-Focus-on-solving-the-problem-Co-1731340433224.txt  Pasted-I-see-the-issue-In-the-analyzer-py-when-clicking-Continue-to-Chat-the-page-navigation-isn-t-wor-1730984422983.txt  Pasted-class-UniversalWebScraper-Universal-web-scraper-with-comprehensive-data-extraction-capabilit-1730982373253.txt  Pasted-def-display-analysis-results-result-CompanyInfo-Display-the-analysis-results-in-an-organiz-1730978301763.txt  Pasted-def-extract-products-self-soup-BeautifulSoup-url-str-List-Dict-Extract-products-ser-1730978050335.txt  (+40 more)
.streamlit/: config.toml
pages/: main.py
(+17 files in other folders)
