[project]
name = "repl-nix-genmarketingai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "openai>=1.54.3",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "streamlit>=1.40.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
]
