[project]
name = "repl-nix-genmarketingai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.2.0",
    "beautifulsoup4>=4.12.3",
    "cryptography>=43.0.3",
    "jose>=1.0.0",
    "numpy>=2.1.3",
    "openai>=1.54.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "passlib>=1.7.4",
    "pillow>=11.0.0",
    "plotly>=5.24.1",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.3.0",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "sendgrid>=6.11.0",
    "streamlit>=1.40.0",
    "torch>=2.5.1",
    "transformers>=4.46.2",
    "xlsxwriter>=3.1.2",  
    "fpdf2>=2.7.8",  

]
